# nebula

./: .ai-factory.json  .claudeignore  .coderabbit.yaml  .commit_msg.txt  .cursorignore  .cursorrules  .dockerignore  .doctorrc.yml  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .mergify.yml  .output.txt  .pr-body-temp.md  .taplo.toml  .tmp-pr392-review-comment.md  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRATES.md  Cargo.toml  HANDOFF.md  IDEA.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  ISSUES.md  LABELS.md  LICENSE  NEWCOMERS.md  NEXT_STEPS.md  PHASE5_OTHER_CRATES_AUDIT.md  PROGRESS.md  PROJECT_BOARD.md  QUICK_START.md  README.md  (+40 more)
apps/cli/: Cargo.toml
apps/cli/examples/: community-plugin-test.yaml  complex.yaml  hello.yaml  http-test.yaml  pipeline.yaml
apps/cli/src/: actions.rs  cli.rs  config.rs  main.rs  output.rs  plugins.rs  suggestions.rs
apps/cli/tests/: cli_smoke.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: compose.rs  credential_adapters.rs  credential_adapters_tests.rs  credential_composition.rs  credential_runtime.rs  main.rs  oauth_egress.rs  transport.rs  webhook_credential_resolver.rs
apps/server/tests/: execution_store_durability.rs
apps/worker/: Cargo.toml
apps/worker/src/: compose.rs  compose_main.rs  lib.rs  main.rs
apps/worker/tests/: smoke.rs
crates/action/: ACTION_COMPONENTS.md  AGENTS.md  CLAUDE.md  Cargo.toml  DOCS.md  PLAN.md  README.md  nebula-action-types.md
crates/action/design/: MIGRATION.md  PLAN.md
crates/action/docs/: Action Result System.md  Action Types.md  Architecture Review.md  DESIGN.md  Error Model.md  README.md
crates/action/examples/: action_components.rs
crates/action/macros/: Cargo.toml
crates/action/plans/: 01-overview.md  02-core-types.md  03-triggers.md  04-dx-types.md  05-context-capabilities.md  06-handlers-registry.md  07-errors-result-derives.md  08-testing-docs-phases.md  data-tag-registry.md  nebula-action-addendum.md
crates/action/src/: action.rs  agent.rs  authoring.rs  branch_key.rs  budget.rs  capability.rs  components.rs  context.rs  control.rs  dependency.rs  erased.rs  error.rs  execution.rs  ext.rs  factory.rs  from_workflow_node.rs  guard.rs  handle.rs  handler.rs  idempotency.rs  key_validation.rs  lib.rs  macros.rs  metadata.rs  output.rs  poll.rs  port.rs  port_key.rs  prelude.rs  provider.rs  reference.rs  registry.rs  resource.rs  resource_produces.rs  result.rs  sandbox.rs  scoped.rs  stateful.rs  stateless.rs  stream.rs  (+4 more)
crates/action/tests/: action_attr_phantom_rewrite.rs  contracts.rs  deferred_recovery.rs  derive_action.rs  derive_action_compile_fail.rs  dx_batch.rs  dx_control.rs  dx_paginated.rs  dx_poll.rs  dx_transactional.rs  dx_webhook.rs  execution_integration.rs  fixed_factory.rs  idempotency_smoke.rs  incoming_event_limits.rs  instance_factory.rs  metadata_max_concurrent_smoke.rs  resource_roundtrip.rs  retry_gating.rs  schema_validator_expression_pipeline.rs  seam_action_schema_method_removed.rs  trigger_source_required_compile_fail.rs  trigger_source_smoke.rs  type_sizes.rs  webhook_request_limits.rs  webhook_signature.rs
crates/api/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/api/design/: API.md  ARCHITECTURE.md  MIGRATION.md  PLAN.md  README.md  ROADMAP.md  TASKS.md  VISION.md
crates/api/docs/: DESIGN.md  REST_API_AXUM_GUIDE.md  architecture.md  axum-enterprise-clean-code.md
crates/api/examples/: simple_server.rs  unified_server.rs
crates/api/src/: app.rs  auth.rs  config.rs  contracts.rs  error.rs  errors.rs  lib.rs  middleware.rs  pagination.rs  server.rs  state.rs  status.rs  telemetry_init.rs  test_support.rs  trace_capture.rs  workflows.rs
crates/api/tests/: access_e2e.rs  auth_metrics.rs  auth_mfa_csrf.rs  auth_middleware.rs  (+34 more)
crates/app/: Cargo.toml
crates/auth/: Cargo.toml
crates/config/: Cargo.toml  README.md
crates/core/: AGENTS.md  CLAUDE.md  Cargo.toml  DOCS.md  README.md
crates/credential/: AGENTS.md  CLAUDE.md  CREDENTIAL_REF.md  Cargo.toml  DOCS.md  README.md
crates/credential-builtin/: CLAUDE.md  Cargo.toml  README.md
crates/credential-runtime/: CLAUDE.md  Cargo.toml  README.md
crates/credential-testutil/: CLAUDE.md  Cargo.toml  README.md
crates/credential-vault/: CLAUDE.md  Cargo.toml  README.md
crates/crypto/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/engine/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/env/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/error/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/error-macros/: Cargo.toml
crates/eventbus/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/execution/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/expression/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/log/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/macros/: Cargo.toml  README.md
crates/memory/: .miriflags  CHANGELOG.md  Cargo.toml  README.md  bench_results.txt
crates/metadata/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
examples/: Cargo.toml  batch_products.rs  hello_action.rs  paginated_users.rs  poll_habr.rs  transactional.rs  validator_derive.rs  validator_macro.rs
examples/examples/: api_simple_server.rs  credential_plugin_scheme_family.rs  expression_error_messages.rs  expression_maybe_vs_template.rs  expression_template_advanced.rs  expression_template_rendering.rs  m6_postgres_pool.rs  m6_resident_http.rs  m6_telegram_multi_workflow.rs  resource_pooled_http_prelude.rs  resource_postgres_pool.rs  resource_resident_http.rs  resource_telegram_multi_workflow.rs  workflow_batch_etl.rs  workflow_conditional_routing.rs  workflow_data_pipeline.rs  workflow_datetime_schedule.rs  workflow_delay_resume.rs  workflow_json_reshape.rs  workflow_switch_router.rs
examples/src/: lib.rs
spike-iter-3/: Cargo.toml  NOTES.md  README.md  rust-toolchain.toml
spike-iter-3/compile-fail/: Cargo.toml
spike-iter-3/credential-proto/: Cargo.toml
spike-iter-3/credential-proto-builtin/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+6880 files in other folders)
