[workspace]
members = [
    "crates/action",
    "crates/config",
    "crates/storage",
    "crates/core",
    "crates/credential",
    "crates/engine",
    "crates/eventbus",
    "crates/execution",
    "crates/expression",
    "crates/log",
    "crates/memory",
    "crates/metrics",
    "crates/plugin",
    "crates/parameter",
    "crates/resilience",
    "crates/resource",
    "crates/runtime",
    "crates/system",
    "crates/telemetry",
    "crates/validator",
    "crates/api",
    "crates/webhook",
    "crates/workflow",
    "crates/sdk/macros-support",
    "crates/resource/macros",
    "crates/sdk",
    "crates/error",
    "crates/error/macros",
    "crates/action/macros",
    "crates/credential/macros",
    "crates/plugin/macros",
    "crates/parameter/macros",
    "crates/validator/macros",
    "crates/config/macros",
]
exclude = [
    "crates/*/fuzz",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
keywords = ["workflow", "integrations", "no-code", "low-code", "automation"]
authors = ["Vanya Stafford <vanya.john.stafford@gmail.com>"]
description = "Workflow automation toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vanyastaff/nebula"
homepage = "https://github.com/vanyastaff/nebula"
documentation = "https://docs.rs/nebula"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-util = "0.7.18"
rayon = { version = "1.11.0" }
async-trait = "0.1.89"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_with = "3.17.0"

# Logging and tracing
thiserror = { version = "2.0.18" }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false }

# Concurrency and synchronization
dashmap = { version = "6.1.0", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
moka = { version = "0.12", default-features = false }
once_cell = "1.21"
arc-swap = "1.8"
spin = "0.10.0"

# Graph
petgraph = "0.8"

# Data structures
bitflags = "2.11"
domain-key = { version = "0.4.2", features = ["serde", "uuid-v4"] }
bon = { version = "3.9.0" }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
im = { version = "15.1", features = ["serde"] }
smallvec = { version = "1.15", features = ["union", "const_generics", "serde"] }
heapless = "0.9.2"

# Numeric types
rust_decimal = { version = "1.40", features = ["serde"] }

# String and data processing
regex = "1.12"
url = { version = "2.5", features = ["serde"] }
base64 = "0.22.1"
bytes = "1.11.1"
hex = "0.4"
lasso = { version = "0.7", features = ["multi-threaded"] }

# Crypto
sha2 = "0.10"
hmac = "0.12"

# Formats
csv = "1.4"
quick-xml = { version = "0.39", features = ["serialize"] }

# HTTP
reqwest = { version = "0.13", features = ["json"], default-features = false }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# JSON Web Tokens
jsonwebtoken = "9"

# Random number generation
rand = "0.10"

# Platform-specific
libc = "0.2"

# Observability (optional)
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.1"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"

# Testing
pretty_assertions = "1.4"
mockall = "0.14.0"
tempfile = "3.26.0"
proptest = "1.11"
criterion = { package = "codspeed-criterion-compat", version = "4" }
tokio-test = "0.4"
test-case = "3.3.1"

# Nebula internal
nebula-error = { path = "crates/error" }
nebula-error-macros = { path = "crates/error/macros" }



[profile.dev]
# Standard dev mode
opt-level = 0
incremental = true
debug = 2

[profile.release]
# Optimized release builds (tuned for Windows stability)
lto = "thin"        # Link-time optimization without ICE issues
codegen-units = 16  # Parallel compilation, more stable than 1
opt-level = 3       # Maximum optimization level
strip = "symbols"   # Remove symbols for smaller binary
panic = 'abort'     # Smaller binary, faster unwinding
