[workspace]
members = [
  "xtask",
  "crates/action",
  "crates/storage",
  "crates/core",
  "crates/credential",
  "crates/engine",
  "crates/eventbus",
  "crates/execution",
  "crates/expression",
  "crates/log",
  "crates/metadata",
  "crates/metrics",
  "crates/plugin",
  "crates/schema",
  "crates/schema/macros",
  "crates/resilience",
  "crates/resource",
  "crates/runtime",
  "crates/system",
  "crates/telemetry",
  "crates/validator",
  "crates/api",
  "crates/workflow",
  "crates/sdk/macros-support",
  "crates/resource/macros",
  "crates/sdk",
  "crates/error",
  "crates/error/macros",
  "crates/action/macros",
  "crates/credential/macros",
  "crates/plugin/macros",
  "crates/validator/macros",
  "crates/sandbox",
  "crates/plugin-sdk",
  "apps/cli",
  "examples",
]
exclude = ["crates/*/fuzz"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
keywords = ["workflow", "integrations", "no-code", "low-code", "automation"]
authors = ["Vanya Stafford <vanya.john.stafford@gmail.com>"]
description = "Workflow automation toolkit"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vanyastaff/nebula"
homepage = "https://github.com/vanyastaff/nebula"
documentation = "https://docs.rs/nebula"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs"] }
tokio-util = "0.7.18"
async-trait = "0.1.89"
async-channel = "2.5"
futures = "0.3"
futures-core = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"

# Logging and tracing
thiserror = { version = "2.0.18" }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false }

# Concurrency and synchronization
dashmap = { version = "6.1.0", default-features = false }
lru = { version = "0.16.3", default-features = false }
parking_lot = { version = "0.12.5", default-features = false }
moka = { version = "0.12", default-features = false }
arc-swap = "1.9"

# Graph
petgraph = "0.8"
domain-key = { version = "0.5.1", features = [
  "serde",
  "ulid",
  "uuid",
  "sqlx-postgres",
  "sqlx-sqlite",
] }
uuid = { version = "1.23", features = ["v4", "serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
smallvec = { version = "1.15", features = ["union", "const_generics", "serde"] }
indexmap = { version = "2", features = ["serde"] }

# String and data processing
regex = "1.12"
url = { version = "2.5", features = ["serde"] }
base64 = "0.22.1"
bytes = "1.11.1"
lasso = { version = "0.7", features = ["multi-threaded"] }

# Crypto
sha2 = "0.11"
hmac = "0.13"
hex = "0.4"
subtle = "2.6"
zeroize = { version = "1.8.2", features = ["std"] }
argon2 = { version = "0.5.3", default-features = false, features = ["std"] }

# HTTP
http = "1.4"
reqwest = { version = "0.13", features = ["json"], default-features = false }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# JSON Web Tokens
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Random number generation
rand = "0.10"

# Platform-specific
libc = "0.2"

# Observability (optional)
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.32.1"
tempfile = "3.27.0"
proptest = "1.11"
criterion = { package = "codspeed-criterion-compat", version = "4" }

# Semantic versioning
semver = { version = "1", features = ["serde"] }

# Nebula internal
nebula-error = { path = "crates/error" }
nebula-error-macros = { path = "crates/error/macros" }


# ─── Workspace-wide lint policy ──────────────────────────────────────────────
#
# Every crate opts in with `[lints] workspace = true` in its own Cargo.toml.
# Groups use `priority = -1` so specific lint overrides below them win.
#
# The allow-list exists for two reasons:
#   (1) pedantic/nursery lints that are stylistic noise in a heavily generic
#       codebase (e.g. `module_name_repetitions`, `similar_names`);
#   (2) lints that conflict with load-bearing patterns we use on purpose
#       (e.g. `cast_*` around byte-level encoding, `option_if_let_else`
#       where `match` reads better than `.map_or`).
#
# If you find yourself wanting to `#[allow(...)]` the same pedantic lint in
# three or more files, consider promoting the allow here instead.
[workspace.lints.rust]
unsafe_code = "warn"           # sandbox / plugin-sdk opt out via crate-level `#![allow(unsafe_code)]`
unused_lifetimes = "warn"
unused_qualifications = "warn"
trivial_numeric_casts = "warn"
redundant_lifetimes = "warn"
# Deliberately NOT enabled workspace-wide (revisit once the core stabilises):
# - `missing_docs` — too noisy on internal modules; will land crate-by-crate.
# - `missing_debug_implementations` — same.
# - `unreachable_pub` — conflicts with re-export chains in the sdk façade.
# - `let_underscore_drop` — `let _ = tokio::spawn(...)` / `let _ = tx.send(_)`
#   is the standard idiom for fire-and-forget; forcing `drop(x)` hurts clarity.
#
# `cfg(loom)` is set by nebula-resilience's loom harness; keep the check-cfg
# entry at workspace level so every crate can switch `workspace = true` on
# without re-declaring it locally.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[workspace.lints.clippy]
# Opt into the big batteries. `priority = -1` lets individual `allow = ...`
# entries below this section override the group default.
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# ── pedantic: stylistic noise on a generic workspace ───────────────────────
module_name_repetitions = "allow"   # `credential::CredentialManager` reads fine
similar_names = "allow"             # `req` / `res`, `tx` / `rx` etc.
too_many_lines = "allow"            # threshold lives in clippy.toml
must_use_candidate = "allow"        # builder / fluent APIs are ubiquitous
return_self_not_must_use = "allow"
missing_errors_doc = "allow"        # error docs live on the error enum itself
missing_panics_doc = "allow"
needless_pass_by_value = "allow"    # conflicts with ergonomic builder API
struct_excessive_bools = "allow"    # threshold lives in clippy.toml
fn_params_excessive_bools = "allow"

# ── casts that are load-bearing at IO / codec / hashing boundaries ─────────
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"

# ── nursery: known-noisy experimental lints ────────────────────────────────
option_if_let_else = "allow"            # `match` often reads cleaner than .map_or
missing_const_for_fn = "allow"          # churns with every generic bound change
use_self = "allow"                      # fires inside macro expansions
redundant_pub_crate = "allow"           # conflicts with the sdk re-export façade
significant_drop_tightening = "allow"   # too many false positives
significant_drop_in_scrutinee = "allow"
branches_sharing_code = "allow"         # often makes branches less readable
cognitive_complexity = "allow"          # threshold lives in clippy.toml
future_not_send = "allow"               # `Send` bound on futures is runtime's call
ignore_without_reason = "allow"         # gated by clippy-cargo, too strict for tests

# ── pedantic stylistic noise that is not worth churning code over ─────────
items_after_statements = "allow" # late-initialised helpers inside fn bodies
# Intentional allow — universal policy: docs/QUALITY_GATES.md § "Intentionally allowed Clippy".
manual_let_else = "allow"
match_same_arms = "allow"                    # different comment / semantics per arm
default_trait_access = "allow"               # `T::default()` ≡ `Default::default()`
ref_option = "allow"                         # `&Option<T>` is sometimes required by API shape
too_long_first_doc_paragraph = "allow"
missing_fields_in_debug = "allow"            # manual Debug impls drop cred / secret fields on purpose
match_wildcard_for_single_variants = "allow"
needless_continue = "allow"
format_push_string = "allow"                 # `push_str(&format!(...))` is idiomatic enough
unused_async = "allow"                       # bench helpers (criterion.to_async) + public API forward-compat
unused_self = "allow"                        # pedantic noise on trait impls where `self` is required by signature
unnecessary_wraps = "allow"                  # API-consistency `Result` on builtin tables, `fn main() -> Result<…>`

# ── long-tail pedantic / nursery noise (<10 hits each, not worth churning) ──
# These fire a handful of times across the workspace, each one is a matter of
# taste or a micro-optimisation that would mean an API break. Revisit when a
# refactor naturally touches the site.
wildcard_imports = "allow"                    # kept noisy but shelved: prelude / re-export patterns
or_fun_call = "allow"                         # `unwrap_or(T::default())` is clearer than unwrap_or_else
trivially_copy_pass_by_ref = "allow"
needless_pass_by_ref_mut = "allow"
needless_collect = "allow"
map_unwrap_or = "allow"
excessive_nesting = "allow"                   # threshold lives in clippy.toml
useless_let_if_seq = "allow"
assigning_clones = "allow"                    # micro-perf on `a = b.clone()`
unused_peekable = "allow"
type_repetition_in_bounds = "allow"
trivial_regex = "allow"
struct_field_names = "allow"                  # threshold lives in clippy.toml
literal_string_with_formatting_args = "allow"
into_iter_without_iter = "allow"
inline_always = "allow"                       # `#[inline(always)]` on cold happy paths is intentional
implicit_hasher = "allow"
doc_link_with_quotes = "allow"
iter_on_single_items = "allow"
from_iter_instead_of_collect = "allow"
enum_glob_use = "allow"

# ── cargo: expected noise in a multi-crate workspace ───────────────────────
multiple_crate_versions = "allow" # transitive dep version skew is unavoidable
cargo_common_metadata = "allow"   # re-enable per-crate once public metadata stabilises

# ── doc_markdown: too many domain identifiers to chase via doc-valid-idents ─
doc_markdown = "allow"

# ── macro-expansion false positives (not our code) ─────────────────────────
# `assert_eq!`/`proptest!` expand to `==` comparisons on floats — clippy
# attributes the lint to the macro call site, which is useless noise.
float_cmp = "allow"
# Bindings like `_fixture` from rstest / proptest are internal to the macro.
used_underscore_binding = "allow"

# ── correctness / soundness escalated from default ─────────────────────────
mem_forget = "deny"

# ── docs/QUALITY_GATES.md — mechanized junior markers (citations in that file) ──
# C-SEND-SYNC: https://rust-lang.github.io/api-guidelines/interoperability.html#c-send-sync
rc_mutex = "warn"
arc_with_non_send_sync = "warn"
# `dbg!` must not ship in non-test code (tests exempt via clippy.toml).
dbg_macro = "warn"
# docs/IDIOM_REVIEW_CHECKLIST.md — pattern-matching recall (Rust Reference + Clippy)
match_like_matches_macro = "warn"
redundant_pattern_matching = "warn"
single_match_else = "warn"
wildcard_in_or_patterns = "warn"

[profile.dev]
# Standard dev mode
opt-level = 0
incremental = true
debug = 2

[profile.release]
# Optimized release builds (tuned for Windows stability)
lto = "thin"       # Link-time optimization without ICE issues
codegen-units = 16 # Parallel compilation, more stable than 1
opt-level = 3      # Maximum optimization level
strip = "symbols"  # Remove symbols for smaller binary
panic = 'abort'    # Smaller binary, faster unwinding

[profile.profiling]
inherits = "release"
debug = 2
strip = "none"

[profile.bench]
debug = 2
