[package]
name = "nebula-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable examples for Nebula DX traits (stateless, stateful, trigger actions)"
publish = false
autobins = false

[package.metadata.cargo-shear]
# serde used via #[derive(Deserialize)] in the HTTP response structs of each
# demo; cargo shear's static-only scan doesn't detect derive-time usage.
ignored = ["serde"]

[dependencies]
nebula-sdk = { path = "../crates/sdk" }
nebula-validator = { path = "../crates/validator" }

tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

reqwest = { workspace = true, features = ["json", "rustls"] }
rss = "2.0"
chrono = { workspace = true }

[[bin]]
name = "hello_action"
path = "hello_action.rs"

[[bin]]
name = "paginated_users"
path = "paginated_users.rs"

[[bin]]
name = "batch_products"
path = "batch_products.rs"

[[bin]]
name = "poll_habr"
path = "poll_habr.rs"

[[bin]]
name = "validator_derive"
path = "validator_derive.rs"

[[bin]]
name = "validator_macro"
path = "validator_macro.rs"

[lints]
workspace = true
