[package]
name = "nebula-examples"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Runnable end-user examples for the Nebula workspace"

# Empty lib placeholder so cargo recognises the package; runnable code lives
# in `examples/<topic>_<name>.rs`. See `crates/<crate>/README.md` for which
# examples belong to which crate.
[lib]
path = "src/lib.rs"
doc = false

[dependencies]
async-trait = { workspace = true }
nebula-expression = { path = "../crates/expression" }
nebula-core = { path = "../crates/core" }
nebula-resource = { path = "../crates/resource" }
nebula-schema = { path = "../crates/schema" }
nebula-api = { path = "../crates/api" }
nebula-storage = { path = "../crates/storage", features = ["credential-in-memory"] }
nebula-engine = { path = "../crates/engine" }
nebula-workflow = { path = "../crates/workflow" }
nebula-plugin-core = { path = "../crates/plugin-core" }
nebula-action = { path = "../crates/action" }
nebula-execution = { path = "../crates/execution" }
nebula-eventbus = { path = "../crates/eventbus" }
nebula-metrics = { path = "../crates/metrics" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
parking_lot = { workspace = true }
futures = { workspace = true }

[[example]]
name = "expression_error_messages"
path = "examples/expression_error_messages.rs"

[[example]]
name = "expression_maybe_vs_template"
path = "examples/expression_maybe_vs_template.rs"

[[example]]
name = "expression_template_advanced"
path = "examples/expression_template_advanced.rs"

[[example]]
name = "expression_template_rendering"
path = "examples/expression_template_rendering.rs"

[[example]]
name = "api_simple_server"
path = "examples/api_simple_server.rs"

[[example]]
name = "resource_postgres_pool"
path = "examples/resource_postgres_pool.rs"

[[example]]
name = "resource_telegram_multi_workflow"
path = "examples/resource_telegram_multi_workflow.rs"

[[example]]
name = "resource_resident_http"
path = "examples/resource_resident_http.rs"

[[example]]
name = "resource_pooled_http_prelude"
path = "examples/resource_pooled_http_prelude.rs"

[[example]]
name = "credential_plugin_scheme_family"
path = "examples/credential_plugin_scheme_family.rs"

[[example]]
name = "workflow_data_pipeline"
path = "examples/workflow_data_pipeline.rs"

[[example]]
name = "workflow_delay_resume"
path = "examples/workflow_delay_resume.rs"

[[example]]
name = "workflow_datetime_schedule"
path = "examples/workflow_datetime_schedule.rs"

[[example]]
name = "workflow_conditional_routing"
path = "examples/workflow_conditional_routing.rs"

[[example]]
name = "workflow_switch_router"
path = "examples/workflow_switch_router.rs"

[lints]
workspace = true
