[workspace]
members = ["credential-proto", "credential-proto-builtin", "compile-fail"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
publish = false
license = "MIT"

[workspace.dependencies]
zeroize = { version = "1.8", features = ["zeroize_derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
trybuild = "1"

# CI profile — fast builds, no debug info bloat.
[profile.release]
opt-level = 3
lto = false

[profile.test]
opt-level = 0
