[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.95"
description = "Workspace maintenance tasks (quality gates)"
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Intentionally minimal — keep `cargo run -p xtask` fast and dependency-light.
