[package]
name = "nebula-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nebula-server"
path = "src/main.rs"

[dependencies]
nebula-api = { path = "../../crates/api" }
# The spec-16 port wiring (in-memory adapters behind the `nebula-tenancy`
# scoping decorators) is encapsulated in `AppState::in_memory`, so the
# composition root needs neither `nebula-storage-port` nor
# `nebula-tenancy` directly. `nebula-storage` is still required for the
# PG-backed idempotency store (`nebula_storage::pg::PgIdempotencyStore`,
# gated by `feature = "postgres"`).
nebula-storage = { path = "../../crates/storage", features = ["credential-in-memory"] }
# Composition root wires a process-wide `MetricsRegistry` and attaches the OTLP push
# pipeline via `TelemetryGuard::attach_metrics_exporter`. Direct dep so the surface stays
# stable across api re-export refactors.
nebula-metrics = { path = "../../crates/metrics" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
axum = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
# Production SMTP transport for the `EmailPort`. The trait + dev EchoSink live
# in nebula-api; the lettre-backed impl lives here so the api crate stays free
# of the lettre direct dep (and library consumers of nebula-api do not pull
# lettre transitively).
lettre = { workspace = true }
# Optional — only linked by the PG-backed idempotency path in
# `compose::build_pg_idempotency_store` (gated by `feature = "postgres"`).
# Mirrors `crates/api/Cargo.toml` exactly so the verbatim `use sqlx::...`
# port resolves identically.
sqlx = { workspace = true, optional = true, features = [
  "runtime-tokio",
  "postgres",
  "tls-rustls-ring-native-roots",
] }

[features]
postgres = ["nebula-api/postgres", "dep:sqlx"]

[lints]
workspace = true
