[package]
name = "nebula-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "nebula-server"
path = "src/main.rs"

[dependencies]
nebula-api = { path = "../../crates/api" }
# In-memory adapters and the SQLite/Postgres execution-store paths live in
# nebula-storage. The `sqlite` feature enables SqliteConnectOptions/Pool/stores;
# PG-backed stores are gated behind the `postgres` cargo feature.
nebula-storage = { path = "../../crates/storage", features = ["credential-in-memory", "sqlite"] }
# Direct dep: `ExecutionStoreBundle` in compose.rs names the port trait objects
# (`WorkflowStore`, `ControlQueue`, `TriggerDedupInbox`, …) directly, so the
# storage-port crate must be a real dependency, not accessed through re-exports.
# nebula-server is in deny.toml's nebula-storage-port `wrappers` allowlist.
nebula-storage-port = { path = "../../crates/storage-port" }
# Composition root wires a process-wide `MetricsRegistry` and attaches the OTLP push
# pipeline via `TelemetryGuard::attach_metrics_exporter`. Direct dep so the surface stays
# stable across api re-export refactors.
nebula-metrics = { path = "../../crates/metrics" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
axum = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
# Production SMTP transport for the `EmailPort`. The trait + dev EchoSink live
# in nebula-api; the lettre-backed impl lives here so the api crate stays free
# of the lettre direct dep (and library consumers of nebula-api do not pull
# lettre transitively).
lettre = { workspace = true }
# SQLite + Postgres: a single sqlx dep with sqlite always enabled (the durable
# single-process backend), and postgres + TLS enabled by the `postgres` cargo
# feature. This mirrors how the worker binary wires sqlx across its two paths.
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }

[features]
postgres = ["nebula-api/postgres", "sqlx/postgres", "sqlx/tls-rustls-ring-native-roots"]

[dev-dependencies]
tempfile = { workspace = true }
# Activate the `test-util` feature of nebula-api for tests — exposes
# `ApiConfig::for_test()`. Cargo unions features from [dependencies] and
# [dev-dependencies], so this only activates the feature in test builds.
nebula-api = { path = "../../crates/api", features = ["test-util"] }

[lints]
workspace = true
